onclite: init: change sysfs owner for display_pwr Change sysfs owner to system for /sys/kernel/hbtp/display_pwr. Sysfs is used by power team to notify when display is on/off.
Change-Id: I81e5715b26a7d42a806c3e060f19033eff76f3bb
Signed-off-by: Jprimero15 <jprimero155@gmail.com>
Signed-off-by: jacksproject <contact@jackbd.me>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -210,6 +210,9 @@ on boot
     # Create hvdcp_opti directory
     mkdir /mnt/vendor/persist/hvdcp_opti 0770 root system
 
+    # QTI PowerHAL
+    chown system system /sys/kernel/hbtp/display_pwr
+
     #sensors log dir
     mkdir /data/vendor/sensors
     chown system system /data/vendor/sensors
